# DFResearch

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  fsrequirements.txt  testgpu.py
.github/workflows/: DFCICD.yml
backend/: Cargo.toml
backend/src/: build.rs  main.rs  model.rs  routes.rs
backend/src/auth/: cognito_routes.rs  cognito_service.rs  jwt.rs  middleware.rs  mod.rs  models.rs  routes.rs
backend/src/cache/: cache_service.rs  mod.rs  models.rs
backend/src/db/: dynamodb_repository.rs  mod.rs  task_repository.rs
backend/src/ddb/: mod.rs  model.rs  task_service.rs
backend/src/pyprocess/: augmentations.rs  config.rs  mod.rs  model.rs
backend/src/storage/: s3_service.rs
config/: augmentations.yaml
densenet/: densenetmodel.py  trainer.py
dfresearch/: __main__.py  basetrainer.py  dataloader.py  ensemblemodel.py  ensembletrainer.py  loaderconf.py  setup.py  trainer.py
frontend/: Cargo.toml  Trunk.toml  index.html  package.json  styles.css  tailwind.config.js
frontend/public/: index.html
frontend/src/: api.rs  main.rs  styles.scss
frontend/src/components/: auth_button.rs  handlers.rs  header.rs  mod.rs  preview_area.rs  results.rs  theme_toggle.rs  upload_section.rs  utils.rs
pyproject/densenet/: densenetmodel.py  trainer.py
pyproject/dfresearch/: __main__.py  augmentations.py  basetrainer.py  config.py  dataloader.py  ensemblemodel.py  ensembletrainer.py
pyproject/regnet/: regnetmodel.py  trainer.py
pyproject/resnet/: resnetmodel.py  trainer.py
regnet/: trainer.py
resnet/: resnetmodel.py  trainer.py
shared/: Cargo.toml
shared/src/: lib.rs
src/: api.rs
