[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "^4"
actix-files = "0.6.2"
actix-cors = "0.6"
actix-multipart = "0.6.0"
futures = "0.3.28"
torch-sys = "0.19.0"
tch = { version = "0.19.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
dotenv = "0.15"
uuid = { version = "1.3.3", features = ["v4", "serde"] }
chrono = { version = "0.4.24", features = ["serde"] }
base64 = "0.21.2"
log = "0.4.17"
env_logger = "0.10.0"
futures-util = "0.3"
image = "0.25.6"
rustfft = "6.1"
rustdct = "0.7"
ndarray = "0.15"
shared = { path = "../shared" }
