[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "^4"
actix-files = "0.6.2"
actix-cors = "0.7"
actix-multipart = "0.7"
actix-web-httpauth = "0.8"
futures = "0.3.28"
torch-sys = "0.20"
tch = { version = "0.20", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
aws-config = "1.1"
aws-sdk-dynamodb = "1.15"
aws-sdk-s3 = "1.15"
aws-sdk-cognitoidentityprovider = "1.15"
jsonwebtoken = "9.2"
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
url = "2.4"
sha2 = "0.10"
hex = "0.4"
dotenv = "0.15"
uuid = { version = "1.3.3", features = ["v4", "serde"] }
chrono = { version = "0.4.24", features = ["serde"] }
base64 = "0.22"
log = "0.4.17"
env_logger = "0.11"
futures-util = "0.3"
image = "0.25.6"
rustfft = "6.1"
rustdct = "0.7"
ndarray = "0.16"
shared = { path = "../shared" }
urlencoding = "2.1"
lazy_static = "1.4"
