[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
yew-components = "0.3"
yew_assets = { version="0.1", features=["full"] }
gloo-file = "0.3"
gloo-net = "0.5"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
log = "0.4"
console_log = "1.0"
web-sys = { version = "0.3.64", features = [
    "Window",
    "Document",
    "HtmlElement",
    "HtmlInputElement",
    "FormData",
    "File",
    "Blob",
    "Url",
    "console"
]}
