[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
yew = { version = "0.20", features = ["csr"] }
yew-components = "0.3"
yew_assets = { version="0.1", features=["full"] }
gloo-file = "0.3"
gloo-events = "0.2" # Added for EventListener
gloo-net = "0.5"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
log = "0.4"
# console_log = "1.0"
wasm-logger = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3.77", features = [
    "Window",
    "Document",
    "HtmlElement", # Already present
    "HtmlInputElement", # Already present
    "FormData", # Already present
    "File", # Already present
    "FileList", # Added
    "Blob", # Already present
    "Url", # Already present
    "DragEvent", # Added
    "DataTransfer", # Added
    "ClipboardEvent", # Added
    "EventTarget", # Added
    "Event", # Added
    "MouseEvent", # Added
    "HtmlElement",
    "HtmlInputElement",
    "FormData",
    "File",
    "Blob",
    "Url",
    "CssStyleDeclaration",
    "console"
]}
