[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
yew = { version = "0.21", features = ["csr"] }
yew-components = "0.3"
yew_assets = { version="0.1", features=["full"] }
gloo-file = "0.3"
gloo-events = "0.2"
gloo-net = "0.6"
gloo-timers = "0.3"
gloo-storage = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-console = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
log = "0.4"
# console_log = "1.0"
wasm-logger = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3.77", features = [
    "Window",
    "Document",
    "HtmlElement",
    "Element",
    "DomRect",
    "HtmlInputElement",
    "FormData",
    "File",
    "FileList",
    "Blob",
    "Url",
    "DragEvent",
    "DataTransfer",
    "ClipboardEvent",
    "EventTarget",
    "Event",
    "MouseEvent",
    "HtmlElement",
    "HtmlInputElement",
    "FormData",
    "File",
    "Blob",
    "Url",
    "CssStyleDeclaration",
    "console",
    "Location",
    "UrlSearchParams",
    "History"
]}
